--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "archiver": "^6.0.1",
     "async": "^3.2.4",
     "body-parser": "^1.20.2",
     "express": "^4.18.2"
