--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "archiver": "^6.0.1",
     "async": "^3.2.4",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2"
   }
 }
