--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "async": "^3.2.4",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "fs-extra": "^11.1.1"
   }
 }
