--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "fs-extra": "^11.1.1",
-    "request": "^2.88.2"
+    "multer": "^1.4.5-lts.1"
   }
 }
