--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "archiver": "^6.0.1",
     "async": "^3.2.4",
-    "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "fs-extra": "^11.1.1",
+    "mongodb": "^6.2.0",
     "multer": "^1.4.5-lts.1"
   }
 }
