--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.4",
+    "express-validator": "^7.0.1",
     "fs-extra": "^11.1.1",
+    "helmet": "^7.1.0",
     "mongodb": "^6.2.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "ws": "^8.14.2"
   }
 }
