--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "archiver": "^6.0.1",
     "async": "^3.2.4",
     "bcrypt": "^5.1.1",
-    "cookie-parser": "^1.4.6",
+    "cookie": "^0.6.0",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.4",
     "express-validator": "^7.0.1",
